--- a/packages/core/src/common/_variables.scss
+++ b/packages/core/src/common/_variables.scss
@@ -152,6 +152,7 @@ $pt-dark-toast-box-shadow: $pt-dark-elevation-shadow-3 !default;
 // See https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/system_color_keywords for more info on system colors.
 $pt-high-contrast-mode-border-color: buttonborder;
 $pt-high-contrast-mode-active-background-color: highlight;
+$pt-high-contrast-mode-active-text-color: highlight;
 $pt-high-contrast-mode-disabled-border-color: graytext;
 $pt-high-contrast-mode-disabled-text-color: graytext;
 $pt-high-contrast-mode-disabled-background-color: graytext;
